# cxx

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: ci.yaml
cmake/presets/: x86-linux-clang.json
cmake/vcpkg/: vcpkg.toolchain.cmake
src/: CMakeLists.txt
src/cli/: CMakeLists.txt
src/cli/src/: main.cpp
src/cmake/: add_cxx_executable.cmake  add_cxx_module.cmake  cxx-install-targets.cmake  set_cxx_target_properties.cmake
src/core/: CMakeLists.txt
src/core/include/cxx/core/: coroutine.hpp  expected.hpp  optional.hpp
src/http/: CMakeLists.txt
src/http/include/cxx/http/: http.hpp
src/http/src/: http.cpp
tests/: CMakeLists.txt
tests/cmake/: add_cxx_test.cmake
tests/core/: CMakeLists.txt  expected_test.cpp  optional_test.cpp
tests/http/: CMakeLists.txt  http_test.cpp
